--- a/lib/src/main/res/values/strings.xml
+++ b/lib/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="text_loading">正在加载中&#8230;</string>
     <string name="text_hint_refresh">未获取到内容，请点击重试</string>
-    <string name="retry">重试</string>
+    <string name="retry">重新加载</string>
+    <string name="text_load_failed">加载失败</string>
+    <string name="text_load_empty">没有数据</string>
+    <string name="main_page">首页</string>
 </resources>
