--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lib</string>
+    <string name="app_name">WanAndroid</string>
     <string name="empty">正在加载中&#8230;</string>
     <string name="tools">知识体系</string>
     <string name="official_account">公众号</string>
